# oep-opt-package

./: Current_OEP_opt_new_radial_ref_proj.ipynb  O.env  README.md  generic_submission.sh  git_handler.sh  molpro_template.inp  oep-opt_master.py
oep-opt/: README.md  example_submit_file.sh  pyproject.toml
oep-opt/src/oep_opt/: callback.py  cli.py  concurrency.py  config.py  io_utils.py  logging_setup.py  parameterizations.py  parsing.py  scoring.py  slurm.py  utils.py  workflow.py
oep-opt/src/oep_opt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tempalates/: example_slurm_script_master.sh  example_slurm_script_package.sh  molpro_template.inp
